--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
-# Ignore all logfiles and tempfiles.
+# Ignore all logfiles and tempfiles
+/env
 /log/*
 !/log/.keep
 /tmp
@@ -21,3 +22,5 @@
 npm-debug.log
 /bower_components
 /node_modules
+env/.Python
+env/bin/activate
