--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 15
-  user: Cabbage
+  user: tomato
   host: localhost
 
 development:
