--- a/config/database.yml
+++ b/config/database.yml
@@ -23,4 +23,4 @@ production:
   database: imageviewer
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
-
+  host: <%= ENV['DATABASE_HOST'] %>
