--- a/.gitignore
+++ b/.gitignore
@@ -16,16 +16,13 @@
 /log/*
 !/log/.keep
 /tmp
-algorithms/python/env
-algorithms/python3/env
-python/env
+/algorithms/*
+/python/*
 npm-debug.log
 /algorithms/run_data/*
 /public/data/*
 /public/assets/*
 *DS_Store
-env/.Python
-env/bin/activate
 .env
 imageviewer.conf
 /public/dp-data/*
