--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,20 @@
 !/log/.keep
 /tmp
 /algorithms/*/env
+/algorithms/*/env3.6
+/algorithms/*/env3.7
+/algorithms/*/env_3.6
+/algorithms/steatosis_neural_net/mask*
 /algorithms/run_data/*
+/algorithms/python3/color_deconv_utils/*.png
 /python/env/*
 npm-debug.log
 /public/data/*
+/public/uploads/*
 /public/assets/*
+/scripts/conversion.sh
+/scripts/copy.sh
+/scripts/output.csv
 *DS_Store
 .env
 imageviewer.conf
