--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "openseadragon-annotations": "^1.0.2",
     "underscore": "^1.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ays0110/imageviewer.git"
